test/bad/functions/type02.px

func f(String x) def
    return

func g(String x) Char def
    return 'g'

h = g
h = f
